# axemc-routine

./: .gitignore  README.md  axemc-routine.code-workspace
go-routine/: go.work
go-routine/docker/: Makefile  ubuntu-init.yaml
go-routine/docker/rocky/: Dockerfile
go-routine/docker/ubuntu/: Dockerfile
go-routine/example/: go.mod
go-routine/example/common/: example_01_test.go  example_02_test.go  example_03_test.go  example_04_test.go  example_05_test.go
go-routine/example/grammar/: grammar_00_test.go  grammar_01_test.go  grammar_02_test.go  grammar_10_test.go  grammar_12_test.go  grammar_13_test.go  grammar_14_test.go
go-routine/example/middleware/: example_00_test.go  example_01_test.go  example_02_test.go
go-routine/z-main/: go.mod
rust-routine/: Cargo.toml
rust-routine/api-service/: Cargo.toml  dev.yaml
rust-routine/api-service/src/: init.rs  main.rs
rust-routine/api-service/src/config/: mod.rs
rust-routine/api-service/src/global/: mod.rs
rust-routine/api-service/src/micro/hello/: grpc_client.rs  grpc_server.rs
rust-routine/api-service/src/model/: mod.rs  prelude.rs  user_info.rs
rust-routine/api-service/src/service/: mod.rs
rust-routine/api-service/volo-gen/: volo.yml
rust-routine/grammar/: Cargo.toml
rust-routine/grammar/src/: main.rs
rust-routine/practice/day-report/: Cargo.toml
rust-routine/practice/ws-server-client/: Cargo.toml
rust-routine/training/axum-seaorm/: Cargo.toml
rust-routine/training/axum-seaorm/src/: main.rs
rust-routine/training/axum-seaorm/src/common/: mod.rs
rust-routine/training/axum-seaorm/src/config/: config.yml  mod.rs
rust-routine/training/axum-seaorm/src/dao/: mod.rs
rust-routine/training/axum-seaorm/src/db/: mod.rs
rust-routine/training/axum-seaorm/src/model/: articles.rs  mod.rs  prelude.rs
rust-routine/training/axum-seaorm/src/router/: mod.rs
rust-routine/training/http-server/: Cargo.toml
rust-routine/training/http-server/data/: orders.json
rust-routine/training/http-server/public/: 404.html  health.html  index.html
rust-routine/training/http-server/src/: handler.rs  main.rs  router.rs  server.rs
rust-routine/training/yew-web/: .gitignore  Cargo.toml
rust-routine/training/yew-web/src/: main.rs
