[package]
edition = "2021"
name = "axum-seaorm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
once_cell = "1.16.0"
sea-orm = {version = "0.10.5", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "debug-print"]}
serde = {version = "1.0.150", features = ["derive"]}
serde_json = "1.0.89"
serde_yaml = "0.9.14"
tokio = {version = "1.23.0", features = ["full"]}
tower = "0.4.13"
tower-cookies = "0.8.0"
tower-http = {version = "0.3.5", features = ["fs"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
